--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
  COLORS 
  - Primary: #e67e22
  - Tints: #fdf2e9
+ - Shades: #cf711f
  - Greys: 
   #333
   #555
@@ -16,6 +17,7 @@
   box-sizing: border-box;
 }
 
+/* GENERAL COMPONENTS */
 html {
   /* font-size: 10px; */
   /* 10px / 16px = 0.625 = 62.5% */
@@ -24,25 +26,23 @@ html {
 }
 
 body {
-  font-family: sans-serif;
+  font-family: "Rubik", sans-serif;
   line-height: 1;
   font-weight: 400;
   color: #555;
 }
-.section-hero {
-  background-color: #fdf2e9;
-  padding: 9.6rem 0;
+.btn {
+  transition: all 0.3s;
 }
-.hero {
-  margin: 0 auto;
-  max-width: 130rem;
-  align-items: center;
-  gap: 9.6rem;
-  /* background-color: rgb(177, 80, 80); */
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-}
-.hero-text-box {
+.btn:link,
+.btn:visited {
+  font-size: 2rem;
+  color: #fff;
+  display: inline-block;
+  text-decoration: none;
+  padding: 16px 32px;
+  font-weight: 600;
+  border-radius: 9px;
 }
 .heading-primary {
   font-size: 5.2rem;
@@ -52,6 +52,75 @@ body {
   color: #333;
   margin-bottom: 3.2rem;
 }
+/* REPEATABLE */
+
+/* HEADER */
+
+.header {
+  height: 9.6rem;
+  background-color: #fdf2e9;
+  padding: 0 4.8rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.main-nav-link:link,
+.main-nav-link:visited {
+  display: inline-block;
+
+  text-decoration: none;
+  color: #333;
+  font-weight: 500;
+  font-size: 1.8rem;
+  transition: all 0.3s;
+}
+.main-nav-link:hover,
+.main-nav-link:active {
+  color: #cf711f;
+}
+.main-nav-link.nav-cta:link,
+.main-nav-link.nav-cta:visited {
+  display: inline-block;
+  padding: 1.2rem 2.4rem;
+  background-color: #e67e22;
+  color: #fff;
+  border-radius: 9px;
+}
+.main-nav-link.nav-cta:hover,
+.main-nav-link.nav-cta:active {
+  display: inline-block;
+  padding: 1.2rem 2.4rem;
+  background-color: #cf711f;
+  color: #fff;
+  border-radius: 9px;
+}
+.logo {
+  height: 2.2rem;
+}
+.main-nav-list {
+  display: flex;
+  align-items: center;
+  gap: 3.2rem;
+  list-style: none;
+}
+/* HERO  */
+.section-hero {
+  background-color: #fdf2e9;
+  padding: 4.8rem 0 9.6rem 0;
+}
+.hero {
+  margin: 0 auto;
+  max-width: 130rem;
+  align-items: center;
+  gap: 9.6rem;
+  padding: 0 3.2rem;
+  /* background-color: rgb(177, 80, 80); */
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+.hero-text-box {
+}
+
 .hero-description {
   font-size: 2rem;
   line-height: 1.6;
@@ -63,18 +132,7 @@ body {
 .hero-img {
   width: 100%;
 }
-.btn:link,
-.btn:visited {
-  font-size: 2rem;
-  color: #fff;
-  display: inline-block;
-  text-decoration: none;
-  padding: 16px 32px;
-  border-radius: 9px;
-}
-.btn {
-  transition: all 0.3s;
-}
+
 .btn-full:link,
 .btn-full:visited {
   background-color: #e67e22;
@@ -98,4 +156,32 @@ body {
   box-shadow: inset 0 0 0 3px #fff;
   /* border: 3px solid #fff; */
   color: #555;
+}
+
+.delivered-meals {
+  display: flex;
+  margin-top: 8rem;
+  gap: 1.6rem;
+  align-items: center;
+}
+.delivered-imgs {
+  display: flex;
+}
+.delivered-imgs img {
+  height: 4.8rem;
+  width: 4.8rem;
+  border-radius: 50%;
+  margin-right: -1.6rem;
+  border: 3px solid #fdf2e9;
+}
+.delivered-imgs img:last-child {
+  margin: 0;
+}
+.delivered-text {
+  font-size: 1.8rem;
+  font-weight: 600;
+}
+.delivered-text span {
+  color: #cf711f;
+  font-weight: 700;
 }
