--- a/css/style.css
+++ b/css/style.css
@@ -1,59 +1,3 @@
-/* 
------------------ 
-
- COLORS 
- - Primary: #e67e22
- - Tints: #fdf2e9
- - Shades: #cf711f
- - Greys: 
-  #333
-  #555
- ----------------- 
-*/
-
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}
-
-/* GENERAL COMPONENTS */
-html {
-  /* font-size: 10px; */
-  /* 10px / 16px = 0.625 = 62.5% */
-  /* Percentage of user's browser font-size setting */
-  font-size: 62.5%;
-}
-
-body {
-  font-family: "Rubik", sans-serif;
-  line-height: 1;
-  font-weight: 400;
-  color: #555;
-}
-.btn {
-  transition: all 0.3s;
-}
-.btn:link,
-.btn:visited {
-  font-size: 2rem;
-  color: #fff;
-  display: inline-block;
-  text-decoration: none;
-  padding: 16px 32px;
-  font-weight: 600;
-  border-radius: 9px;
-}
-.heading-primary {
-  font-size: 5.2rem;
-  font-weight: 700;
-  line-height: 1.05;
-  letter-spacing: -0.5px;
-  color: #333;
-  margin-bottom: 3.2rem;
-}
-/* REPEATABLE */
-
 /* HEADER */
 
 .header {
@@ -184,4 +128,80 @@ body {
 .delivered-text span {
   color: #cf711f;
   font-weight: 700;
+}
+/* HOW IT WORKS*/
+
+.grid {
+  display: grid;
+  row-gap: 9.6rem;
+  column-gap: 6.4rem;
+}
+.grid-center-v {
+  align-items: center;
+}
+.grid-2-cols {
+  grid-template-columns: repeat(2, 1fr);
+}
+.grid-3-cols {
+  grid-template-columns: repeat(3, 1fr);
+}
+.section-how {
+  padding: 9.6rem 0;
+  /* padding: 4.8rem 0 9.6rem 0; */
+  /* background-color: rgb(231, 120, 80); */
+}
+.container {
+  /* 1140px */
+  /* background-color: rgb(96, 199, 199); */
+  max-width: 120rem;
+  padding: 0 3.2rem;
+  margin: 0 auto;
+}
+
+.step-img-box {
+  display: flex;
+  align-items: center;
+  /* flex: 0 0 auto; */
+  position: relative;
+  justify-content: center;
+}
+
+.step-img-box::before,
+.step-img-box::after {
+  content: "";
+  display: block;
+
+  /* position: absolute; */
+
+  /* 60% of parents width */
+  position: absolute;
+}
+.step-img-box::after {
+  padding-bottom: 40%;
+  border-radius: 50%;
+  z-index: -1;
+  width: 40%;
+  background-color: #fae5d3;
+}
+.step-img-box::before {
+  background-color: #fdf2e9;
+  padding-bottom: 60%;
+  border-radius: 50%;
+  width: 60%;
+  z-index: -2;
+}
+.step-img {
+  width: 35%;
+}
+.step-description {
+  font-size: 1.8rem;
+  line-height: 1.8;
+}
+.step-text-box {
+}
+.step-number {
+  font-size: 9.6rem;
+  font-weight: 600;
+  color: #ddd;
+  margin-bottom: 1.2rem;
 }
