--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,4 @@
 /* HEADER */
-
 .header {
   height: 9.6rem;
   background-color: #fdf2e9;
@@ -128,6 +127,31 @@
 .delivered-text span {
   color: #cf711f;
   font-weight: 700;
+}
+
+/* FEATURED IN */
+.section-featured {
+  padding: 4.8rem 0;
+}
+.heading-featured-in {
+  font-size: 1.4rem;
+  text-transform: uppercase;
+  letter-spacing: 0.75px;
+  font-weight: 500;
+  text-align: center;
+  opacity: 0.9;
+  margin-bottom: 2.4rem;
+}
+.logos {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  gap: 1.6rem;
+}
+.logos img {
+  height: 3.2rem;
+  filter: brightness(0);
+  opacity: 0.5;
 }
 /* HOW IT WORKS*/
 
