--- a/css/general.css
+++ b/css/general.css
@@ -79,3 +79,40 @@ body {
 }
 .step-description {
 }
+
+.center-text {
+  text-align: center;
+}
+.margin-bottom-md {
+  margin-bottom: 4.8rem !important;
+}
+.list {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 1.6rem;
+}
+.list-item {
+  font-size: 1.8rem;
+  display: flex;
+  align-items: center;
+  gap: 1.6rem;
+  /* background-color: antiquewhite; */
+}
+.link:link,
+.link:visited {
+  color: #e67e22;
+  text-decoration: none;
+  padding-bottom: 2px;
+  border-bottom: 1px solid currentColor;
+  transition: all 0.2s;
+}
+.link:hover,
+.link:active {
+  color: #cf711f;
+  transition: all 0.2s;
+  border-bottom: 1px solid transparent;
+}
+strong {
+  font-weight: 500;
+}
