--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,13 @@
   line-height: 1.6;
   margin-bottom: 4.8rem;
 }
-
+.container {
+  /* 1140px */
+  /* background-color: rgb(96, 199, 199); */
+  max-width: 120rem;
+  padding: 0 3.2rem;
+  margin: 0 auto;
+}
 .hero-image-box {
 }
 .hero-img {
@@ -160,6 +166,9 @@
   row-gap: 9.6rem;
   column-gap: 6.4rem;
 }
+.grid:not(:last-child) {
+  margin-bottom: 9.6rem;
+}
 .grid-center-v {
   align-items: center;
 }
@@ -169,17 +178,13 @@
 .grid-3-cols {
   grid-template-columns: repeat(3, 1fr);
 }
+.grid-4-cols {
+  grid-template-columns: repeat(4, 1fr);
+}
 .section-how {
   padding: 9.6rem 0;
   /* padding: 4.8rem 0 9.6rem 0; */
   /* background-color: rgb(231, 120, 80); */
-}
-.container {
-  /* 1140px */
-  /* background-color: rgb(96, 199, 199); */
-  max-width: 120rem;
-  padding: 0 3.2rem;
-  margin: 0 auto;
 }
 
 .step-img-box {
@@ -355,4 +360,67 @@
 }
 .gallery-item img:hover {
   transform: scale(1.05);
+}
+
+/* PRICING  */
+.section-pricing {
+  padding: 9.6rem 0;
+}
+.pricing-plan {
+  border-radius: 11px;
+  padding: 4.8rem;
+  width: 75%;
+}
+.pricing-plan-starter {
+  justify-self: flex-end;
+  box-shadow: inset 0 0 0 2px #fae5d3;
+}
+.pricing-plan-complete {
+  background-color: #fdf2e9;
+  position: relative;
+  overflow: hidden;
+}
+.pricing-plan-complete::after {
+  content: "Best value";
+  position: absolute;
+  background-color: #ffd43d;
+  padding: 0.8rem 5rem;
+  top: 6%;
+  right: -13%;
+  font-weight: 600;
+  font-size: 1.7rem;
+  text-transform: uppercase;
+  transform: rotate(45deg);
+}
+.plan-header {
+  text-align: center;
+  margin-bottom: 4.8rem;
+}
+.plan-name {
+  color: #cf711f;
+  font-weight: 600;
+  font-size: 2rem;
+  text-transform: uppercase;
+  margin-bottom: 3.2rem;
+}
+.plan-price {
+  font-size: 6.2rem;
+  font-weight: 600;
+  color: #333;
+  margin-bottom: 1.6rem;
+}
+.plan-price span {
+  font-size: 3rem;
+  font-weight: 500;
+  margin-right: 0.8rem;
+}
+.plan-text {
+  font-size: 1.6rem;
+  line-height: 1.6;
+  color: #6f6f6f;
+}
+
+.plan-sign-up {
+  text-align: center;
+  margin-top: 4.8rem;
 }
