--- a/css/general.css
+++ b/css/general.css
@@ -34,6 +34,7 @@ body {
 .btn {
   transition: all 0.3s;
 }
+.btn,
 .btn:link,
 .btn:visited {
   font-size: 2rem;
@@ -43,6 +44,20 @@ body {
   padding: 16px 32px;
   font-weight: 600;
   border-radius: 9px;
+  /* only for buttons */
+}
+.btn-form {
+  align-self: flex-end;
+  font-family: inherit;
+  color: #fdf2e6;
+  padding: 1.2rem;
+  background-color: #45260a;
+  border: none;
+  cursor: pointer;
+}
+.btn-form:hover {
+  background-color: #fff;
+  color: #555;
 }
 .heading-primary,
 .heading-secondary,
@@ -115,4 +130,8 @@ body {
 }
 strong {
   font-weight: 500;
+}
+*:focus {
+  outline: none;
+  box-shadow: 0 0 0 0.8rem rgba(230, 125, 34, 0.5);
 }
