--- a/css/style.css
+++ b/css/style.css
@@ -424,3 +424,106 @@
   text-align: center;
   margin-top: 4.8rem;
 }
+
+.plan-details {
+  font-size: 1.6rem;
+  line-height: 1.6;
+  text-align: center;
+}
+.feature {
+}
+.feature-icon {
+  color: #e67e22;
+  /* overflow: visible; */
+  height: 2.4rem;
+  width: 2.4rem;
+  margin-bottom: 3.2rem;
+  position: relative;
+  background-color: #fdf2e9;
+  padding: 1.6rem;
+  border-radius: 50%;
+}
+.feature-title {
+  font-size: 2.4rem;
+  color: #333;
+  font-weight: 700;
+  margin-bottom: 1.6rem;
+}
+.feature-text {
+  line-height: 1.8;
+  font-size: 1.8rem;
+}
+
+/* CTA  */
+.section-cta {
+  padding: 9.6rem 0;
+}
+.cta {
+  display: grid;
+  /* height: 50rem; */
+  overflow: hidden;
+  box-shadow: 0 2.4rem 4.8rem rgb(0, 0, 0, 0.15);
+  border-radius: 11px;
+  background-color: #e67e22;
+  background-image: linear-gradient(to right bottom, #eb984e, #e67e22);
+  grid-template-columns: 2fr 1fr;
+}
+.cta *:focus {
+  outline: none;
+  box-shadow: 0 0 0 0.8rem rgba(253, 242, 233, 0.5);
+}
+.cta-text-box {
+  color: #45260a;
+  padding: 6.4rem;
+  padding-top: 4.8rem;
+}
+.cta .heading-secondary {
+  color: inherit;
+  margin-bottom: 3.2rem;
+}
+.cta-text {
+  font-size: 1.8rem;
+  line-height: 1.8;
+  margin-bottom: 4.8rem;
+}
+.cta-image-box {
+  background-image: linear-gradient(
+      to right bottom,
+      rgba(235, 151, 78, 0.35),
+      rgba(230, 125, 34, 0.35)
+    ),
+    url("../content/img/eating.jpg");
+  background-size: cover;
+  background-position: center;
+}
+.cta-form {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  column-gap: 3.2rem;
+  row-gap: 2.4rem;
+}
+.cta-form label {
+  display: block;
+  font-size: 1.6rem;
+  margin-bottom: 1.2rem;
+  font-weight: 500;
+}
+.cta-form input,
+.cta-form select {
+  width: 100%;
+  padding: 1.2rem;
+  font-family: inherit;
+  font-size: 1.8rem;
+  border: none;
+  background-color: #fdf2e9;
+  color: inherit;
+  border-radius: 9px;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+}
+.cta-form select {
+}
+.cta-form input::placeholder {
+  color: #aaa;
+}
+.cta-form button {
+}
