--- a/css/style.css
+++ b/css/style.css
@@ -181,6 +181,9 @@
 .grid-4-cols {
   grid-template-columns: repeat(4, 1fr);
 }
+.grid-5-cols {
+  grid-template-columns: repeat(5, 1fr);
+}
 .section-how {
   padding: 9.6rem 0;
   /* padding: 4.8rem 0 9.6rem 0; */
@@ -456,7 +459,7 @@
 
 /* CTA  */
 .section-cta {
-  padding: 9.6rem 0;
+  padding: 4.8rem 0 12.8rem;
 }
 .cta {
   display: grid;
@@ -526,4 +529,72 @@
   color: #aaa;
 }
 .cta-form button {
+}
+
+/* FOOTER  */
+.footer {
+  padding: 12.8rem 0;
+  /* background-color: #333; */
+  border-top: 1px solid #eee;
+}
+.grid-footer {
+  grid-template-columns: 1.5fr 1.5fr 1fr 1fr 1fr;
+}
+
+.footer-heading {
+  font-size: 1.8rem;
+  font-weight: 500;
+  margin-bottom: 4rem;
+}
+.footer-nav {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 2.4rem;
+}
+
+.footer-link:link,
+.footer-link:visited {
+  text-decoration: none;
+  font-size: 1.6rem;
+  color: #767676;
+  transition: all 0.4s;
+}
+
+.footer-link:hover,
+.footer-link:active {
+  color: #555;
+}
+.logo-col {
+  display: flex;
+  flex-direction: column;
+}
+.social-links {
+  list-style: none;
+  display: flex;
+  gap: 2.4rem;
+}
+.footer-logo {
+  display: block;
+  margin-bottom: 3.2rem;
+}
+.footer-icons {
+  height: 2.4rem;
+  width: 2.4rem;
+}
+.copyright {
+  display: block;
+  font-size: 1.4rem;
+  line-height: 1.6;
+  margin-top: auto;
+  color: #767676;
+}
+
+.contacts {
+  font-style: normal;
+  font-size: 1.6rem;
+  line-height: 1.6;
+}
+.address {
+  margin-bottom: 2.4rem;
 }
