--- a/css/general.css
+++ b/css/general.css
@@ -41,7 +41,7 @@ body {
   color: #fff;
   display: inline-block;
   text-decoration: none;
-  padding: 16px 32px;
+  padding: 1.6rem 3.2rem;
   font-weight: 600;
   border-radius: 9px;
   /* only for buttons */
