--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,8 @@
   padding: 0 4.8rem;
   display: flex;
   align-items: center;
+  position: relative;
+
   justify-content: space-between;
 }
 .main-nav-link:link,
@@ -36,6 +38,20 @@
   background-color: #cf711f;
   color: #fff;
   border-radius: 9px;
+}
+.btn-mobile-nav {
+  display: none;
+  border: none;
+  background: none;
+  cursor: pointer;
+}
+.icon-mobile-nav {
+  height: 4.8rem;
+  width: 4.8rem;
+  color: #333;
+}
+.icon-mobile-nav[name="close-outline"] {
+  display: none;
 }
 .logo {
   height: 2.2rem;
