--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,12 @@
 /* HEADER */
 .header {
   height: 9.6rem;
-  background-color: #fdf2e9;
+  backdrop-filter: blur(5px);
   padding: 0 4.8rem;
   display: flex;
   align-items: center;
   position: relative;
-
+  background-color: #fdf2e9;
   justify-content: space-between;
 }
 .main-nav-link:link,
@@ -76,6 +76,20 @@
   /* background-color: rgb(177, 80, 80); */
   display: grid;
   grid-template-columns: 1fr 1fr;
+}
+
+.sticky {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  height: 8rem;
+  padding-top: 0;
+  padding-bottom: 0;
+  z-index: 9999;
+
+  background-color: rgba(255, 255, 255, 0.8);
+  box-shadow: 0 1.2rem 3.2rem rgba(0, 0, 0, 0.03);
 }
 .hero-text-box {
 }
