--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 /* HEADER */
 .header {
   height: 9.6rem;
+  -webkit-backdrop-filter: blur(5px);
   backdrop-filter: blur(5px);
   padding: 0 4.8rem;
   display: flex;
